FIX: overflow on menu - allow to have scrollbar when taller than main content * Firefox issue was memory problem; cache-clearing and restarting fixed

--- a/src/assets/css/scss/globals.scss
+++ b/src/assets/css/scss/globals.scss
@@ -130,7 +130,7 @@ body {
 	box-shadow: inset -8px 0 8px -6px rgba(0,0,0,0.2);
 	display: none;	/* deal with FOUC */
 	height: 100%;
-	overflow: hidden;
+	overflow-y: auto;
 	position: absolute;
 		top: 0;
 	@include translate3d(-100%,0,0);
